feat: standardize validation error codes for cart, coupon, and order requests; add store info to CartItem; update error code definitions and messages